--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="utf-8">
+  <meta name="author" content="Julius Adriell Dumangas">
+  <link rel="stylesheet" type="text/css" href="styles.css">
 	<title>Hello Coursera!</title>
 </head>
 <body>
-  <h1>Hello Coursera!</h1>
+  <header id="main-header">
+    <div class="container">
+      <h1>juliuS adrielL dumangaS</h1>
+      <p>front-end web developer</p>
+    </div>
+  </header>
 </body>
 </html>
