added new files

--- a/site/index.html
+++ b/site/index.html
@@ -2,16 +2,46 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="author" content="Julius Adriell Dumangas">
-  <link rel="stylesheet" type="text/css" href="styles.css">
-	<title>Hello Coursera!</title>
+	<title></title>
+  <link rel="stylesheet" type="text/css" href="./css/styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 <body>
-  <header id="main-header">
+  <header>
     <div class="container">
-      <h1>juliuS adrielL dumangaS</h1>
-      <p>front-end web developer</p>
+      <img src="./images/pacman.jpg" alt="pacman" id="pacman">
+      <h2>Hi,</h2>
+      <h1>I'm <span id="julius">Julius!</span></h1>
+      <p>( Julius Adriell Dumangas )</p>
+      <ul>
+        <li class="contact"><img src="./images/email.png" alt=""> adriell.dumangas@gmail.com</li>
+        <li class="contact"><img src="./images/phone.png" alt=""> +63 916 709 7807</li>
+      </ul>
+
+      <nav id="main-nav">
+        <ul>
+          <li><a href="#">About Me</a></li>
+          <li><a href="#">Work Experience</a></li>
+        </ul>
+      </nav>
+
     </div>
   </header>
+
+  <section>
+    <div class="container">
+      
+    </div>
+  </section>
+
+  <footer>
+    <div class="container">
+      <ul>
+        <li><a href="#">Resume</a></li>
+        <li><a href="#">LinkedIn</a></li>
+      </ul>
+      <p>&copy; 2017 Julius Adriell Dumangas, All right reserved.</p>
+    </div>
+  </footer>
 </body>
 </html>
