--- a/site/index.html
+++ b/site/index.html
@@ -2,46 +2,26 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-	<title></title>
-  <link rel="stylesheet" type="text/css" href="./css/styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <title>Julius Dumangas | Hello!</title>
+  <link rel="stylesheet" type="text/css" href="./css/main-style.css">
 </head>
 <body>
+  <div id="resume">
+    <a href="https://drive.google.com/open?id=0BwZULKK0ckshd1NGaEl3dEtYS1E" target="_blank">R&#x00c9;SUM&#x00c9; <img src="./assets/download-icon.svg"></a>
+  </div>
+
   <header>
     <div class="container">
-      <img src="./images/pacman.jpg" alt="pacman" id="pacman">
-      <h2>Hi,</h2>
+      <h1>Hi.</h1>
       <h1>I'm <span id="julius">Julius!</span></h1>
-      <p>( Julius Adriell Dumangas )</p>
-      <ul>
-        <li class="contact"><img src="./images/email.png" alt=""> adriell.dumangas@gmail.com</li>
-        <li class="contact"><img src="./images/phone.png" alt=""> +63 916 709 7807</li>
-      </ul>
-
-      <nav id="main-nav">
-        <ul>
-          <li><a href="#">About Me</a></li>
-          <li><a href="#">Work Experience</a></li>
-        </ul>
-      </nav>
-
+      <div id="contact">
+        <p id="fullname">Julius Adriell Dumangas</p>
+        <p>adriell.dumangas@gmail.com</p>
+        <p>+63 916 709 7807</p>
+      </div>
     </div>
+    
   </header>
 
-  <section>
-    <div class="container">
-      
-    </div>
-  </section>
-
-  <footer>
-    <div class="container">
-      <ul>
-        <li><a href="#">Resume</a></li>
-        <li><a href="#">LinkedIn</a></li>
-      </ul>
-      <p>&copy; 2017 Julius Adriell Dumangas, All right reserved.</p>
-    </div>
-  </footer>
 </body>
 </html>
