--- a/site/index.html
+++ b/site/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
   <div id="resume">
-    <a href="https://drive.google.com/open?id=0BwZULKK0ckshd1NGaEl3dEtYS1E" target="_blank">R&#x00c9;SUM&#x00c9; <img src="./assets/download-icon.svg"></a>
+    <a href="https://drive.google.com/open?id=0BwZULKK0ckshd1NGaEl3dEtYS1E" target="_blank">
+      R&#x00c9;SUM&#x00c9; <img src="./assets/download-icon.svg">
+    </a>
   </div>
 
   <header>
@@ -20,8 +22,21 @@
         <p>+63 916 709 7807</p>
       </div>
     </div>
-    
   </header>
+
+  <section id="work">
+    <div class="container">
+      <h1 id="exp"><span>E</span>xperience</h1>
+      <div id="work-grid">
+        <p class="date">July 2012 - Present</p>
+        <ul>
+          <li class="job">Data Entry Specialist</li>
+          <li class="company">RenditionDigital, Inc.</li>
+          <li>Ayala Ave., Makati City</li>
+        </ul>
+      </div>
+    </div>
+  </section>
 
 </body>
 </html>
