made it resposive(trial)

--- a/site/index.html
+++ b/site/index.html
@@ -2,16 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Julius Dumangas | Hello!</title>
   <link rel="stylesheet" type="text/css" href="./css/main-style.css">
 </head>
 <body>
-  <div id="resume">
-    <a href="https://drive.google.com/open?id=0BwZULKK0ckshd1NGaEl3dEtYS1E" target="_blank">
-      R&#x00c9;SUM&#x00c9; <img src="./assets/download-icon.svg">
-    </a>
-  </div>
-
+  
   <header>
     <div class="container">
       <h1>Hi.</h1>
@@ -24,17 +20,32 @@
     </div>
   </header>
 
+  <div id="resume">
+    <a href="https://drive.google.com/open?id=0BwZULKK0ckshd1NGaEl3dEtYS1E" target="_blank">
+      R&#x00c9;SUM&#x00c9; <img src="./assets/download-icon.svg">
+    </a>
+  </div>
+
   <section id="work">
     <div class="container">
       <h1 id="exp"><span>E</span>xperience</h1>
-      <div id="work-grid">
+      <!--GRID-->
+      <div id="work-grid"> 
         <p class="date">July 2012 - Present</p>
         <ul>
           <li class="job">Data Entry Specialist</li>
           <li class="company">RenditionDigital, Inc.</li>
           <li>Ayala Ave., Makati City</li>
         </ul>
+        <p class="date">July 2011 - June 2012</p>
+        <ul>
+          <li class="job">Web Search Specialist</li>
+          <li class="company">RenditionDigital, Inc.</li>
+          <li>Ayala Ave., Makati City</li>
+        </ul>
       </div>
+
+
     </div>
   </section>
 
