--- a/site/index.html
+++ b/site/index.html
@@ -20,34 +20,54 @@
     </div>
   </header>
 
+  <section id="work">
+    <div class="container">
+      <h1 id="exp"><span>E</span>XPERIENCE</h1>
+      <!--GRID-->
+      <div id="work-grid"> 
+        <p class="date">July 2013 - Present</p>
+        <ul class="description">
+          <li class="job">Data Entry Specialist</li>
+          <li class="company">RenditionDigital, Inc.</li>
+          <li class="comp-add">Ayala Ave., Makati City</li>
+        </ul>
+        <p class="date">July 2012 - June 2013</p>
+        <ul class="description">
+          <li class="job">Web Search Specialist</li>
+          <li class="company">RenditionDigital, Inc.</li>
+          <li class="comp-add">Ayala Ave., Makati City</li>
+        </ul>
+        <p class="date">October 2011 - February 2012</p>
+        <ul class="description">
+          <li class="job">Network Support Associate (TSR)</li>
+          <li class="company">iPlus Intelligent Network, Inc.</li>
+          <li class="comp-add">Makati City</li>
+        </ul>
+        <p class="date">May 2010 - April 2011</p>
+        <ul class="description">
+          <li class="job">Computer Technician / Attendant</li>
+          <li class="company">Wyzziwig Internet Cafe</li>
+          <li class="comp-add">Tondo, Manila</li>
+        </ul>
+        <p class="date">May 2010 - June 2010</p>
+        <ul class="description">
+          <li class="job">Assistant Computer Technician</li>
+          <li class="company">Immaculate Heart of Mary College</li>
+          <li class="comp-add">Aurora Blvd., Quezon City</li>
+        </ul>
+        <p class="date">2006 - Present</p>
+        <ul class="description">
+          <li class="job">Freelance Computer Technician</li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
   <div id="resume">
     <a href="https://drive.google.com/open?id=0BwZULKK0ckshd1NGaEl3dEtYS1E" target="_blank">
       R&#x00c9;SUM&#x00c9; <img src="./assets/download-icon.svg">
     </a>
   </div>
-
-  <section id="work">
-    <div class="container">
-      <h1 id="exp"><span>E</span>xperience</h1>
-      <!--GRID-->
-      <div id="work-grid"> 
-        <p class="date">July 2012 - Present</p>
-        <ul>
-          <li class="job">Data Entry Specialist</li>
-          <li class="company">RenditionDigital, Inc.</li>
-          <li>Ayala Ave., Makati City</li>
-        </ul>
-        <p class="date">July 2011 - June 2012</p>
-        <ul>
-          <li class="job">Web Search Specialist</li>
-          <li class="company">RenditionDigital, Inc.</li>
-          <li>Ayala Ave., Makati City</li>
-        </ul>
-      </div>
-
-
-    </div>
-  </section>
 
 </body>
 </html>
