added skills-section and responsiveness

--- a/site/index.html
+++ b/site/index.html
@@ -19,53 +19,86 @@
       </div>
     </div>
   </header>
-
+  <!-- WORK EXPERIENCE SECTION -->
   <section id="work">
     <div class="container">
-      <h1 id="exp"><span>E</span>XPERIENCE</h1>
+      <h1 class="headings"><span>E</span>XPERIENCE</h1>
       <!--GRID-->
-      <div id="work-grid"> 
-        <p class="date">July 2013 - Present</p>
-        <ul class="description">
+      <div class="grid-container"> 
+        <p class="left-side">July 2013 - Present</p>
+        <ul class="right-side">
           <li class="job">Data Entry Specialist</li>
           <li class="company">RenditionDigital, Inc.</li>
           <li class="comp-add">Ayala Ave., Makati City</li>
         </ul>
-        <p class="date">July 2012 - June 2013</p>
-        <ul class="description">
+        <p class="left-side">July 2012 - June 2013</p>
+        <ul class="right-side">
           <li class="job">Web Search Specialist</li>
           <li class="company">RenditionDigital, Inc.</li>
           <li class="comp-add">Ayala Ave., Makati City</li>
         </ul>
-        <p class="date">October 2011 - February 2012</p>
-        <ul class="description">
+        <p class="left-side">October 2011 - February 2012</p>
+        <ul class="right-side">
           <li class="job">Network Support Associate (TSR)</li>
           <li class="company">iPlus Intelligent Network, Inc.</li>
           <li class="comp-add">Makati City</li>
         </ul>
-        <p class="date">May 2010 - April 2011</p>
-        <ul class="description">
+        <p class="left-side">May 2010 - April 2011</p>
+        <ul class="right-side">
           <li class="job">Computer Technician / Attendant</li>
           <li class="company">Wyzziwig Internet Cafe</li>
           <li class="comp-add">Tondo, Manila</li>
         </ul>
-        <p class="date">May 2010 - June 2010</p>
-        <ul class="description">
+        <p class="left-side">May 2010 - June 2010</p>
+        <ul class="right-side">
           <li class="job">Assistant Computer Technician</li>
           <li class="company">Immaculate Heart of Mary College</li>
           <li class="comp-add">Aurora Blvd., Quezon City</li>
         </ul>
-        <p class="date">2006 - Present</p>
-        <ul class="description">
+        <p class="left-side">2006 - Present</p>
+        <ul class="right-side">
           <li class="job">Freelance Computer Technician</li>
         </ul>
       </div>
     </div>
   </section>
+  <!-- SKILLS SECTION -->
+  <section id="skills-section">
+    <div class="container">
+      <h1 class="headings"><span>S</span>KILLS</h1>
+      <!-- GRID -->
+      <div class="grid-container">
+        <p class="left-side">Basic</p>
+        <ul class="right-side">
+          <li>HTML & CSS</li>
+          <li>Front End Web Development</li>
+          <li>Quickbooks</li>
+          <li>Java</li>
+          <li>Python</li>
+          <li>Linux</li>
+        </ul>
+        <p class="left-side">Intermediate</p>
+        <ul class="right-side">
+          <li>Adobe Photoshop</li>
+          <li>Microsoft Office</li>
+          <li>Web Reasearch</li>
+          <li>Computer Networking</li>
+        </ul>
+        <p class="left-side">Advance</p>
+        <ul class="right-side">
+          <li>Typing & Encoding</li>
+          <li>Computer Hardware/ Software Troubleshooting</li>
+          <li>Computer Hardware Repair & Maintenance</li>
+          <li>Computer Assembly</li>
+        </ul>
+      </div>
+
+    </div>
+  </section>
 
   <div id="resume">
     <a href="https://drive.google.com/open?id=0BwZULKK0ckshd1NGaEl3dEtYS1E" target="_blank">
-      R&#x00c9;SUM&#x00c9; <img src="./assets/download-icon.svg">
+      R&#x00c9;SUM&#x00c9; <img src="./assets/download-icon.svg" alt="download logo">
     </a>
   </div>
 
