--- a/site/index.html
+++ b/site/index.html
@@ -19,8 +19,8 @@
       </div>
     </div>
   </header>
-  <!-- WORK EXPERIENCE SECTION -->
-  <section id="work">
+  <!-- work-section EXPERIENCE SECTION -->
+  <section id="work-section">
     <div class="container">
       <h1 class="headings"><span>E</span>XPERIENCE</h1>
       <!--GRID-->
@@ -39,8 +39,8 @@
         </ul>
         <p class="left-side">October 2011 - February 2012</p>
         <ul class="right-side">
-          <li class="job">Network Support Associate (TSR)</li>
-          <li class="company">iPlus Intelligent Network, Inc.</li>
+          <li class="job">Network-section Support Associate (TSR)</li>
+          <li class="company">iPlus Intelligent Network-section, Inc.</li>
           <li class="comp-add">Makati City</li>
         </ul>
         <p class="left-side">May 2010 - April 2011</p>
@@ -57,7 +57,7 @@
         </ul>
         <p class="left-side">2006 - Present</p>
         <ul class="right-side">
-          <li class="job">Freelance Computer Technician</li>
+          <li class="job" id="work-bottom">Freelance Computer Technician</li>
         </ul>
       </div>
     </div>
