added meta tags

--- a/site/index.html
+++ b/site/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="description" content="Julius Adriell Dumangas Resume">
+  <meta name="keywords" content="Julius, Adriell, Dumangas, resume">
+  <meta name="author" content="Julius Adriell Dumangas">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Julius Dumangas | Hello!</title>
   <link rel="stylesheet" type="text/css" href="./css/main-style.css">
@@ -19,7 +22,7 @@
       </div>
     </div>
   </header>
-  <!-- work-section EXPERIENCE SECTION -->
+  <!-- WORK-SECTION -->
   <section id="work-section">
     <div class="container">
       <h1 class="headings"><span>E</span>XPERIENCE</h1>
@@ -81,7 +84,7 @@
         <ul class="right-side">
           <li>Adobe Photoshop</li>
           <li>Microsoft Office</li>
-          <li>Web Reasearch</li>
+          <li>Web Research</li>
           <li>Computer Networking</li>
         </ul>
         <p class="left-side">Advance</p>
