--- a/site/index.html
+++ b/site/index.html
@@ -15,6 +15,7 @@
     <div class="container">
       <h1>Hi.</h1>
       <h1>I'm <span id="julius">Julius!</span></h1>
+      <img src="./assets/header-img2-mini.jpg" alt="mini photo of me" id="mini-photo">
       <div id="contact">
         <p id="fullname">Julius Adriell Dumangas</p>
         <p>adriell.dumangas@gmail.com</p>
